# tswift

./: .gitattributes  .gitignore  .gitmodules  .mise.toml  AGENTS.md  CODING_STANDARD.md  CONTEXT.md  Cargo.toml  README.md  loop-log.md  skills-lock.json
crates/qswift-cli/: Cargo.toml
crates/qswift-cli/benches/: README.md  tree_walker.rs
crates/qswift-cli/benches/programs/: loop_sum.swift
crates/qswift-cli/src/: main.rs
crates/qswift-cli/tests/: bench_corpus.rs  golden.rs
crates/qswift-cli/tests/fixtures/: README.md  array_append.swift  array_optional_cast.swift  array_sort.expected  associated_types.expected  associated_types.swift  autoclosure.swift  bool_shadowing.swift  character_predicates.expected  character_predicates.swift  class_only_protocol.expected  class_only_protocol.swift  class_reference.swift  closure_inout.expected  closure_inout.swift  closures.swift  codable.swift  concurrency_async_sequence.expected  concurrency_async_sequence.swift  concurrency_tasks.expected  conditional_conformance.swift  conversions.swift  custom_errors.expected  custom_sequence.expected  custom_sequence.swift  deinit_weak.swift  dict_default_subscript.swift  dict_element_members.expected  dict_element_members.swift  existential_and_opaque.swift  expressible_by_literal.expected  expressible_by_literal.swift  extension_builtin_types.expected  failable_init.swift  failable_init_super.expected  failable_init_super.swift  for_case_patterns.swift  foundation_data_uuid.expected  foundation_data_uuid.swift  func_nested.swift  (+100 more)
crates/qswift-core/: Cargo.toml
crates/qswift-core/src/: env.rs  grapheme.rs  interp.rs  lib.rs  ops.rs  regex.rs  stdlib.rs  suspend.rs  value.rs
crates/qswift-frontend/: Cargo.toml
crates/qswift-frontend/src/: compat.rs  kind.rs  lib.rs
crates/qswift-frontend/tests/: golden_fixtures.rs
crates/qswift-parser/: Cargo.toml
crates/qswift-parser/src/: lib.rs
crates/qswift-sema/: Cargo.toml
crates/qswift-sema/src/: lib.rs
crates/qswift-wasm/: Cargo.toml
crates/qswift-wasm/src/: lib.rs
crates/qswift-wasm/tests/: wasm_smoke.rs
crates/quick-swift-cli/: Cargo.toml
crates/quick-swift-cli/benches/: README.md  tree_walker.rs
crates/quick-swift-cli/benches/programs/: fib_recursion.swift  struct_ops.swift
crates/quick-swift-cli/benches/support/: corpus.rs
crates/quick-swift-cli/src/: main.rs
crates/quick-swift-cli/tests/: bench_corpus.rs  golden.rs
crates/quick-swift-cli/tests/fixtures/: arithmetic.expected  arithmetic.swift  bitwise.swift  casting.expected  casting.swift  class_reference.expected  classes_inheritance.expected  classes_inheritance.swift  closures.expected  codable.expected  comparison_logical.expected  comparison_logical.swift  concurrency_actors.swift  concurrency_async_await.swift  concurrency_async_let.swift  concurrency_task_group.swift  concurrency_tasks.swift  conditional_compilation.swift  control_flow.expected  control_flow.swift  conversions.expected  defer_order.expected  defer_order.swift  deinit_weak.expected  enum_matching.swift  enum_raw_caseiterable.expected  enum_raw_caseiterable.swift  equatable.swift  errors.expected  errors.swift  func_labels_defaults.expected  func_labels_defaults.swift  func_values.swift  func_variadic.swift  functions_recursion.swift  generics.expected  interpolation.expected  interpolation.swift  labeled_jumps.swift  loops.expected  (+19 more)
crates/quick-swift-frontend/: Cargo.toml  build.rs
crates/quick-swift-frontend/src/: compat.rs  kind.rs  lib.rs
crates/quick-swift-frontend/tests/: differential.rs  golden_fixtures.rs
crates/swift-parser/: Cargo.toml
crates/swift-parser/src/: lib.rs
crates/swift-sema/: Cargo.toml
crates/swift-sema/src/: lib.rs
crates/tswift-charts/: Cargo.toml
crates/tswift-charts/src/: axis.rs  lib.rs  marks.rs  modifiers.rs  prelude.rs  registry.rs
crates/tswift-charts/src/tests/: axes.rs  coverage.rs  marks.rs  mod.rs  modifiers.rs  module_tags.rs  support.rs  wire.rs
crates/tswift-cli/: Cargo.toml  build.rs
crates/tswift-cli/benches/: README.md  tree_walker.rs
crates/tswift-cli/src/: db.rs  defaults.rs  fs.rs  host.rs  httpmock.rs  main.rs  nethttp.rs  sqlite_ffi.rs  swiftui.rs  test_cmd.rs
crates/tswift-cli/tests/: bench_corpus.rs  golden.rs  swiftui_goldens.rs  test_cmd.rs
crates/tswift-cli/tests/fixtures/: README.md  access_control.expected  access_control.swift  array_append.expected  array_optional_cast.expected  array_range_replaceable.expected  array_sort.swift  (+482 more)
crates/tswift-core/: Cargo.toml
crates/tswift-core/src/: base64.rs  decimal.rs  env.rs  fragment_cache.rs  grapheme.rs  host_bridge.rs  host_services.rs  http.rs  interp.rs  json.rs  lib.rs  ops.rs  regex.rs  result_json.rs  stdlib.rs  suspend.rs  value.rs
crates/tswift-eventkit/: Cargo.toml
crates/tswift-eventkit/src/: enums.rs  items.rs  lib.rs  objects.rs  registry.rs  store.rs  tests.rs
crates/tswift-ffi/: Cargo.toml
crates/tswift-ffi/include/: module.modulemap  tswift_ffi.h
crates/tswift-ffi/src/: host.rs  http.rs  lib.rs  run.rs  swiftui.rs  util.rs
crates/tswift-frontend/: Cargo.toml
crates/tswift-frontend/src/: compat.rs  decode.rs  kind.rs  lib.rs  project.rs  symbols.rs
crates/tswift-frontend/tests/: golden_fixtures.rs
crates/tswift-parser/: Cargo.toml
crates/tswift-parser/src/: lib.rs
crates/tswift-sema/: Cargo.toml
crates/tswift-sema/src/: astbuild.rs  builder_transform.rs  lib.rs  passes.rs  symbols.rs
crates/tswift-swiftdata/: Cargo.toml
crates/tswift-swiftdata/src/: db.rs  lib.rs  model.rs
crates/tswift-swiftui/: Cargo.toml
crates/tswift-swiftui/src/: async_image.rs  charts.rs  diff.rs  lib.rs  modifiers.rs  navigation.rs  session.rs  tree.rs  uiir.rs  values.rs  views.rs
crates/tswift-testing/: Cargo.toml
crates/tswift-testing/src/: descriptor.rs  discover.rs  expect.rs  lib.rs  params.rs  render.rs  report.rs  session.rs  traits.rs  wire.rs
crates/tswift-testing/tests/: integration.rs
crates/tswift-wasm/: Cargo.toml
crates/tswift-wasm/src/: analysis_cache.rs  lib.rs  swiftui.rs
crates/tswift-wasm/tests/: wasm_smoke.rs
(+910 files in other folders)
