[workspace]
resolver = "2"
members = [
    "crates/tswift-lexer",
    "crates/tswift-ast",
    "crates/tswift-parser",
    "crates/tswift-sema",
    "crates/tswift-frontend",
    "crates/tswift-core",
    "crates/tswift-std",
    "crates/tswift-foundation",
    "crates/tswift-swiftdata",
    "crates/tswift-swiftui",
    "crates/tswift-charts",
    "crates/tswift-cli",
    "crates/tswift-wasm",
    "crates/tswift-ffi",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/siuying/tswift"

[workspace.dependencies]
tswift-frontend = { path = "crates/tswift-frontend" }
tswift-core = { path = "crates/tswift-core" }
tswift-std = { path = "crates/tswift-std" }
tswift-foundation = { path = "crates/tswift-foundation" }
tswift-swiftdata = { path = "crates/tswift-swiftdata" }
tswift-swiftui = { path = "crates/tswift-swiftui" }
tswift-charts = { path = "crates/tswift-charts" }
tswift-wasm = { path = "crates/tswift-wasm" }
