[workspace]
resolver = "2"
members = [
    "crates/tswift-lexer",
    "crates/tswift-ast",
    "crates/tswift-parser",
    "crates/tswift-sema",
    "crates/tswift-frontend",
    "crates/tswift-core",
    "crates/tswift-std",
    "crates/tswift-foundation",
    "crates/tswift-swiftdata",
    "crates/tswift-swiftui",
    "crates/tswift-charts",
    "crates/tswift-eventkit",
    "crates/tswift-testing",
    "crates/tswift-cli",
    "crates/tswift-wasm",
    "crates/tswift-ffi",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/siuying/tswift"

[workspace.dependencies]
tswift-frontend = { path = "crates/tswift-frontend" }
tswift-core = { path = "crates/tswift-core" }
tswift-std = { path = "crates/tswift-std" }
tswift-foundation = { path = "crates/tswift-foundation" }
tswift-swiftdata = { path = "crates/tswift-swiftdata" }
tswift-swiftui = { path = "crates/tswift-swiftui" }
tswift-charts = { path = "crates/tswift-charts" }
tswift-eventkit = { path = "crates/tswift-eventkit" }
tswift-testing = { path = "crates/tswift-testing" }
tswift-wasm = { path = "crates/tswift-wasm" }
# Already vendored transitively (via `criterion`, a dev-dependency); approved
# for direct use in `tswift-testing`'s wire module (see docs/agents/environment.md).
serde = { version = "=1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "=1.0.150", default-features = false, features = ["std"] }
