[package]
name = "qswift-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "qswift command-line interface."

[[bin]]
name = "qswift"
path = "src/main.rs"

[dependencies]
qswift-frontend.workspace = true
qswift-core.workspace = true
qswift-std.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "tree_walker"
harness = false
