[package]
name = "qswift-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust Swift frontend: drives the lexer/parser/sema pipeline and exposes the runtime-facing typed AST."

[dependencies]
qswift-ast = { path = "../qswift-ast" }
qswift-parser = { path = "../qswift-parser" }
qswift-sema = { path = "../qswift-sema" }

[dev-dependencies]
qswift-lexer = { path = "../qswift-lexer" }
