[package]
name = "qswift-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Recursive-descent + Pratt Swift parser for the qswift frontend pipeline."

[dependencies]
qswift-lexer = { path = "../qswift-lexer" }
qswift-ast = { path = "../qswift-ast" }
