[package]
name = "qswift-sema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic analysis (type resolution) for the qswift frontend pipeline."

[dependencies]
qswift-ast = { path = "../qswift-ast" }

[dev-dependencies]
qswift-parser = { path = "../qswift-parser" }
