[package]
name = "qswift-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser/Wasm bindings for running qswift in-process."

[lib]
crate-type = ["cdylib"]

[dependencies]
qswift-core.workspace = true
qswift-frontend.workspace = true
qswift-std.workspace = true
wasm-bindgen = "0.2.126"
