[package]
name = "qswift-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Browser/Wasm bindings for running qswift in-process."

[lib]
# `rlib` lets the native unit tests link a test harness; `cdylib` is the wasm artifact.
crate-type = ["cdylib", "rlib"]

[dependencies]
qswift-core.workspace = true
qswift-frontend.workspace = true
qswift-std.workspace = true
qswift-foundation.workspace = true
wasm-bindgen = "0.2.126"
