[package]
name = "quick-swift-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "quick-swift command-line interface."

[[bin]]
name = "quick-swift"
path = "src/main.rs"

[features]
default = []
rust-backend = ["quick-swift-frontend/rust-backend"]

[dependencies]
quick-swift-frontend.workspace = true
quick-swift-core.workspace = true
quick-swift-std.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "tree_walker"
harness = false
