[package]
name = "quick-swift-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust Swift frontend: drives the lexer/parser/sema pipeline and exposes the runtime-facing typed AST."

[dependencies]
swift-ast = { path = "../swift-ast" }
swift-parser = { path = "../swift-parser" }
swift-sema = { path = "../swift-sema" }

[dev-dependencies]
swift-lexer = { path = "../swift-lexer" }
