[package]
name = "tswift-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "tswift evaluator spine: SwiftValue, the eval dispatcher, and native registration."

[dependencies]
tswift-frontend.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
corosensei = "0.3.4"
