[package]
name = "tswift-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Recursive-descent + Pratt Swift parser for the tswift frontend pipeline."

[dependencies]
tswift-lexer = { path = "../tswift-lexer" }
tswift-ast = { path = "../tswift-ast" }
