[package]
name = "tswift-sema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic analysis (type resolution) for the tswift frontend pipeline."

[dependencies]
tswift-ast = { path = "../tswift-ast" }

[dev-dependencies]
tswift-parser = { path = "../tswift-parser" }
