[package]
name = "tswift-swiftdata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "tswift SwiftData substrate: the tswift.db.* host-service wire (SQL over the host bridge). No Swift-facing SwiftData API yet."

[dependencies]
tswift-core.workspace = true
tswift-frontend.workspace = true

[dev-dependencies]
# Predicate-compilation tests parse real `#Predicate<T> { … }` source to obtain
# the `CompilerDirective` AST node the macro handler compiles to SQL.
tswift-frontend.workspace = true
