[package]
name = "tswift-swiftui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "tswift SwiftUI render host: view primitives evaluated into a host-neutral UIIR and diffed into a patch stream."

[dependencies]
tswift-core.workspace = true
tswift-frontend.workspace = true

[dev-dependencies]
# Session tests exercising array/`NavigationPath` mutation need the stdlib
# `Array` intrinsics (`append`/`removeLast`); the CLI installs these alongside
# the SwiftUI host, so tests mirror that setup.
tswift-std.workspace = true
